# personal_website

./: .gitignore  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_category_options_alter_post_body.py
blog/templates/blog/: detail.html  index.html  test-markdown.html
main/: views.py
main/templates/main/: welcome.html
templates/: base.html
website/: settings.py  urls.py
